--- a/src/app/components/employee-table/employee-data/employee-data.component.html
+++ b/src/app/components/employee-table/employee-data/employee-data.component.html
@@ -1,57 +1,22 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <div class="employee-table">
-    <table class="table table-striped table-dark">
-        <thead>
-          <tr *ngFor="">
-            <!-- <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                </div>
-            </td> -->
-            
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody>
-            <tr>
-            <!-- <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                </div>
-            </td> -->
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-        </tbody>
-      </table>
+  <table class="table text-center table-striped table-bordered table-dark">
+    <thead>
+      <tr>
+        <th scope="col" *ngFor="let header of headers">{{header | textTransform}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let emp of employees.Employees">
+        <td>{{emp.userId}}</td>
+        <td>{{emp.jobTitle}}</td>
+        <td>{{emp.firstName}}</td>
+        <td>{{emp.lastName}}</td>
+        <td>{{emp.employeeCode}}</td>
+        <td>{{emp.region}}</td>
+        <td>{{emp.phoneNumber}}</td>
+        <td>{{emp.emailAddress}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
